--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter: rouge
 
 permalink: none
 
-theme: jekyll-theme-architect
+theme: minima
 
 url: "https://naminorigorilla.github.io" 
 plugins:
